--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ header {
   font-family: "Poppins";
 }
 
-.center-div {
+#ffffff .center-div {
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
